# skyrim-controlmap-editor

./: package-lock.json  package.json
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: DXScanCodes.json  config.toml  controlmap.txt  events.jsonc
src-tauri/src/: file_api.rs  main.rs
src/api/: config-io.ts
src/components/: ErrorBoundary.tsx  SpeedDial.tsx  Switch.tsx  Tab.tsx  Theme.tsx
src/components/keyboard/: KeyboardWrapper.tsx
src/components/keyboard/fullkeyboard/: FullKeyboard.tsx  index.css
src/components/keyboard/key102/: Key102.tsx  index.css
src/components/user-keys/: Comments.tsx  Grid.tsx  UserKey.tsx  UserKeys.tsx  user-keys.css
src/constants/: default-key-config.ts  default-user-keys.ts  default-user-settings.ts  dx-scan-code.ts  scan-code-changer.ts
src/functions/: key-changer.ts
src/globalStates/: Settings.ts
src/hooks/: useInput.ts  useLayout.ts  useMsg.ts  useTheme.ts  useUserKey.ts
src/layout/: fullkeyboard.ts  index.ts  key102layout.ts
src/shared/: UseQState.ts
src/utils/: types.ts  utils.ts
