[package]
name = "app"
version = "0.1.0"
description = "Skyrim Controlmap Editor"
authors = ["SARDONYX"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
controlmap-parser = { version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
toml = { version = "0.5.8" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
